{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 12,
  "lineage": "95b8d912-56f8-9e36-86b1-a3444e72c785",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-menta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-042794ce7ef397e69",
            "domain": "vpc",
            "id": "eipalloc-0d7c543e3290444ac",
            "instance": "i-0130142d1e5c00156",
            "network_interface": "eni-05c1fe6d6cb8140ac",
            "private_dns": "ip-10-0-0-220.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.220",
            "public_dns": "ec2-18-178-101-204.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.101.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.menta-web",
            "aws_security_group.menta-sg",
            "aws_subnet.public-a",
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "menta-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f310fced6141e627",
            "arn": "arn:aws:ec2:ap-northeast-1:652063952663:instance/i-0130142d1e5c00156",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0130142d1e5c00156",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "menta-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c1fe6d6cb8140ac",
            "private_dns": "ip-10-0-0-220.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.220",
            "public_dns": "ec2-18-178-101-204.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.101.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b4f7ad273a18bf05",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc3d7f2aa03158a",
            "tags": {
              "Name": "menta-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ed4cd0176e250a9"
            ]
          },
          "dependencies": [
            "aws_security_group.menta-sg",
            "aws_subnet.public-a",
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-menta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d4b385fbb9f872b2",
            "owner_id": "652063952663",
            "vpc_id": "vpc-06d249d00ad7874a1"
          },
          "dependencies": [
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f695acae7a97166",
            "owner_id": "652063952663",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4b385fbb9f872b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-06d249d00ad7874a1"
          },
          "dependencies": [
            "aws_internet_gateway.gw-menta",
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "puclic-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc994500782c83e5",
            "route_table_id": "rtb-05f695acae7a97166",
            "subnet_id": "subnet-0bfc3d7f2aa03158a"
          },
          "dependencies": [
            "aws_internet_gateway.gw-menta",
            "aws_route_table.public-route",
            "aws_subnet.public-a",
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "menta-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:652063952663:security-group/sg-03ed4cd0176e250a9",
            "description": "menta-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ed4cd0176e250a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "menta-sg",
            "name_prefix": null,
            "owner_id": "652063952663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "menta-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d249d00ad7874a1"
          },
          "dependencies": [
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:652063952663:subnet/subnet-0bfc3d7f2aa03158a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bfc3d7f2aa03158a",
            "map_public_ip_on_launch": false,
            "owner_id": "652063952663",
            "tags": {
              "Name": "vpc-menta_sub"
            },
            "vpc_id": "vpc-06d249d00ad7874a1"
          },
          "dependencies": [
            "aws_vpc.vpc-menta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-menta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:652063952663:vpc/vpc-06d249d00ad7874a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0568d3f8c5684026c",
            "default_route_table_id": "rtb-082f311fb904d4e91",
            "default_security_group_id": "sg-0afee5fd042fae348",
            "dhcp_options_id": "dopt-98a7b3fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06d249d00ad7874a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-082f311fb904d4e91",
            "owner_id": "652063952663",
            "tags": {
              "Name": "vpc-menta"
            }
          }
        }
      ]
    }
  ]
}